--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,14 @@ dependencies:
   provider: ^6.1.1
   animated_custom_dropdown: ^3.0.0
   easy_date_timeline: ^1.0.4
+  flutter_easyloading: ^3.0.5
+  bot_toast: ^4.1.3
+  lottie: ^3.0.0
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.15.5
+  intl: ^0.19.0
+  flutter_slidable: ^3.0.1
 
 
 dev_dependencies:
@@ -47,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
 
 
   fonts:
